# Auto-balancing-robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STM32C031C6TX_FLASH.ld
Drivers/CMSIS/Include/: cmsis_gcc.h
Drivers/FreeRTOS/: CMakeLists.txt
Src/: CMakeLists.txt  FreeRTOSConfig.h
Src/Core/Src/: main.c  tasks_init.cpp
Src/Core/Startup/: startup_stm32c031c6tx.s
Src/control/: control.cpp  control.hpp
Src/hw/external_hw/mpu6050/: mpu6050.cpp  mpu6050.hpp
Src/hw/external_hw/pwm_motor_driver/: pwm_motor_driver.cpp  pwm_motor_driver.hpp
Src/hw/uc_hw/: uc_specific.h
Src/hw/uc_hw/core_init/: core_init.c  core_init.h
Src/hw/uc_hw/exceptions/: exceptions.c
Src/hw/uc_hw/gpio/: gpio.c  gpio.h
Src/hw/uc_hw/i2c/: i2c.c  i2c.h  i2c_tasks.cpp  i2c_tasks.hpp
Src/hw/uc_hw/tim/: tim.c  tim.h
Src/motors/: motors.cpp  motors.hpp  motors_implementation.cpp  motors_implementation.hpp  motors_tasks.cpp  motors_tasks.hpp
Src/pid/: pid.cpp  pid.hpp  pid_tasks.cpp  pid_tasks.hpp
Src/position_sensor/: position_sensor.cpp  position_sensor.hpp  position_sensor_implementation.cpp  position_sensor_implementation.hpp  position_sensor_tasks.cpp  position_sensor_tasks.hpp
Src/rtos_wrapper/: rtos_hooks.cpp  rtos_wrapper.hpp
Src/safe_state/: safe_state.c  safe_state.h
cmake/: compiler_flags.cmake
